# project-calendar-core

./: .gitignore  CMakeLists.txt  Dockerfile.  docker-compose.kafka.yml  docker-compose.yml
.github/workflows/: deploy.yml
deadline-reminder/: Dockerfile  reminder.py
docs/: api-spec.md  openapi.yaml
docs/plans/: 2026-03-20-backend-full-implementation-design.md  2026-03-20-backend-full-implementation.md
email-consumer/: consumer.py
include/API/: AuthFilter.hpp  ProjectController.hpp  TaskController.hpp  UsersController.hpp
migrations/: 001_schema.sql  003_task_notes.sql  004_user_skills.sql  005_project_visibility.sql  006_project_invitations.sql  007_teams.sql  009_user_extra_fields.sql  010_app_user_middle_name.sql  011_email_verification.sql  012_verify_existing_users.sql  013_ensure_user_skill.sql  014_fix_user_skill_schema.sql  015_dedup_work_schedule.sql  016_notification_settings.sql  017_verify_all_existing_users.sql  018_private_tasks_and_meetings.sql
monitoring/: docker-compose.monitoring.yml
monitoring/alloy/: config.alloy
monitoring/loki/: loki.yaml
monitoring/prometheus/: prometheus.yml
monitoring/tempo/: tempo.yaml
src/: main.cpp
src/API/: AuthController.cc  AuthController.cpp  AuthController.h  AuthFilter.cc  AuthFilter.cpp  CalendarController.cpp  FeedController.cpp  FeedController.h  KafkaProducer.cpp  KafkaProducer.h  MeetingController.cpp  MeetingController.h  Metrics.h  MetricsController.cpp  MetricsController.h  ProjectController.cpp  ProjectController.h  (+10 more)
tests/: docker-compose.test.yml  requirements.txt  test_api.py
(+58 files in other folders)
